Add Ormi stats, filters and pagination
