# src/routes/tool/ormi/labels.ts
@@ -1,0 +1,6 @@
+import api from '$lib/api';
+
+export const suggestLabels = (query: string): Promise<string[]> =>
+	api
+		.callWithAuth('GET', `/ormi/labels?q=${encodeURIComponent(query)}`)
+		.then((response) => response.data);
